--- a/index.html
+++ b/index.html
@@ -103,10 +103,9 @@
 
 
             <div class="w-1/2 mx-auto relative z-[20] py-[4vmax]">
-                <small
-                  class="bg-[#FFCF5F] badge inter-font mx-auto w-fit gap-2 flex justify-center text-[#454545] mt-[2px] items-center rounded-full py-[0.4vmax] px-[1.2vmax] font-normal text-[0.8vmax] mb-[1vmax]"
-                  >Download V1 <i class="mt-[1.5px] ri-download-cloud-2-line"></i
-                ></small>
+                <small style="gap:6px"
+                  class="bg-[#FFCF5F] badge inter-font items-center mx-auto w-fit  flex justify-center text-[#454545] mt-[2px] items-center rounded-full py-[0.4vmax] px-[1.2vmax] font-normal text-[0.8vmax] mb-[1vmax]"
+                  >Download V1 <img src="./assest/Frame-2.svg" alt=""></small>
     
                 <h2
                   class="font-semibold hero-tagline leading-tight text-[#2F2F2F] text-center text-[4vmax] nanum-font"
